# conan-Parson

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.py  conanfile.py  upload.sh
.circleci/: config.yml  install.sh
.travis/: install.sh  run.sh
test_package/: CMakeLists.txt  conanfile.py  test_package.c
